// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Section snapshots > should render Section 1`] = `
<DocumentFragment>
  <div
    class="Section"
    data-test-section=""
  >
    <div
      class="Section__label-wrapper Section__label-wrapper--separator"
    >
      <small
        class="Section__label Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        label
      </small>
      <div
        class="Section__label-component"
      />
    </div>
    children
  </div>
</DocumentFragment>
`;

exports[`Section snapshots > should render with buttons 1`] = `
<DocumentFragment>
  <div
    class="Section"
    data-test-section=""
  >
    <div
      class="Section__label-wrapper Section__label-wrapper--separator"
    >
      <small
        class="Section__label Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        label
      </small>
      <div
        class="Section__label-component"
      >
        <div
          class="ButtonIcon"
          data-test-button-icon=""
          data-test-tooltip=""
        >
          <div
            class="Icon Icon--neutral-1"
            data-test-icon="close"
            height="12"
            name="Close"
            width="12"
          />
        </div>
      </div>
    </div>
    children
  </div>
</DocumentFragment>
`;
